# PicInPicFilter

./: CMakeLists.txt  DLLSetup.cpp  PicInPicFilter.cpp  PicInPicFilter.def  PicInPicFilter.h  PicInPicFilter.rc  PicInPicProperties.cpp  PicInPicProperties.h  resource.h  stdafx.cpp  stdafx.h
